Add VS Code pytest tasks and docs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,12 @@
         "modules",
         "config"
     ],
+    "python.testing.pytestEnabled": true,
+    "python.testing.pytestArgs": [
+        "tests",
+        "-m",
+        "unit or integration"
+    ],
     "jupyter.notebookFileRoot": "${workspaceFolder}",
     "files.exclude": {
         "**/__pycache__": true,
