--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "dwh-spark-processing"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.12,<3.13"
 dependencies = [
     "delta-spark==3.2.1",
     "ipykernel>=7.1.0",
@@ -11,4 +11,10 @@ dependencies = [
     "papermill>=2.6.0",
     "pyarrow>=15.0.0,<16.0.0",
     "pyiceberg>=0.7.0",
+]
+
+[dependency-groups]
+dev = [
+    "nbstripout>=0.8.2",
+    "pytest>=8.3.0",
 ]
