--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,16 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "dwh-spark-processing"
 version = "0.1.0"
 description = "Add your description here"
+authors = [
+  { name = "Albert van Dok", email = "albert@qbids.nl" }
+]
 readme = "README.md"
-requires-python = ">=3.12,<3.13"
+requires-python = "==3.11.8"
 dependencies = [
     "delta-spark==3.2.1",
     "ipykernel>=7.1.0",
@@ -18,3 +25,9 @@ dev = [
     "nbstripout>=0.8.2",
     "pytest>=8.3.0",
 ]
+
+[tool.setuptools]
+package-dir = {"" = "."}
+
+[tool.setuptools.packages.find]
+where = ["."]
